# luax

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  TODO.md
doc/: .LuaReferenecManual.md  5-minites-tour.md  BNF.txt  The_Luax_Programming_Language.md  get-started.md  luax_api.md  luax_design_document.md  luax_reference_manual.md  luax_standard_library.md  opcode.md  source_code_structure.md  vm.md
doc/doc-zh/: README.md  luax_reference_manual.md
example/: OOP_simulation.luax  basic_usage.luax  qsort.luax
src/: CMakeLists.txt  Makefile  base.c  base.h  config.h  luax.h  luax_api.c  luax_api.h  luax_exec.c  mem.c  mem.h  object.c  object.h  opcode.c  opcode.h  parser.c  parser.h  parser_callback.c  parser_callback.h  vm.c  vm.h
src/standard_lib/: CMakeLists.txt  lio.c  lio.h  lmath.c  lmath.h
test/: CMakeLists.txt  a.luaxo  generate_bytecode_test.c  generate_bytecode_test.luax  opcode_example.luaxo  opcode_generate_test_case.luax  parser_using_stack_allocator_test.c  parser_using_stack_allocator_test.luax  require_test_users.luax  stack_allocator_test.c  syntax_parser_test_case.luax  vm_run_test.luax  vm_run_test.luax.output
